--- a/modules/sftp/idp_src/otel-collector-config.yaml
+++ b/modules/sftp/idp_src/otel-collector-config.yaml
@@ -7,13 +7,13 @@ receivers:
 exporters:
   logging:
     loglevel: info
-  otlp:
+  otlp/honeycomb:
     endpoint: "api.honeycomb.io:443"
     headers:
       "x-honeycomb-team": "Shqs03CZQB4VK7yubuyf6F"
+
 service:
   pipelines:
     traces:
       receivers: [otlp]
-      exporters: [otlp]
-
+      exporters: [otlp/honeycomb]
